--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,8 @@
 name: 'github apps test'
 on:
   workflow_dispatch:
+jobs:
+  pull_request:
+    runs-on: ubuntu:latest
+    steps:
+      - run: echo 123
