--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,9 @@ jobs:
         with:
           app-id: ${{ secrets.APP_ID }}
           private-key: ${{ secrets.PRIVATE_KEY }}
+          owner: chihiro-adachi
+          repositories: |
+            test-github-apps-target
       - name: Use token
         env:
           TOKEN: ${{ steps.app-token.outputs.token }}
