--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,5 +29,6 @@ jobs:
           cd test-github-apps-target
           git checkout -b temp-1234 origin/main
           echo 123 >> test.txt
+          git add test.txt
           git commit -m "test 123"
           
