--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,4 +31,5 @@ jobs:
           echo 123 >> test.txt
           git add test.txt
           git commit -m "test 123"
+          gh pr create
           
