--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,15 +21,16 @@ jobs:
       - name: Create PR
         env:
           GH_TOKEN: ${{ steps.app-token.outputs.token }}
+          BRANCH: temp-1234
         run: |
           git config --global user.email "you@example.com"
           git config --global user.name "Chihiro Adachi"
           gh repo clone chihiro-adachi/test-github-apps-target
           ls -la
           cd test-github-apps-target
-          git checkout -b temp-1234 origin/main
+          git checkout -b ${BRANCH} origin/main
           echo 123 >> test.txt
           git add test.txt
           git commit -m "test 123"
-          gh pr create --fill --head
+          gh pr create --fill --base main --head ${BRANCH} 
           
