--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,17 +18,14 @@ jobs:
           GH_TOKEN: ${{ steps.app-token.outputs.token }}
           BRANCH: temp-1234
         run: |
-          git config --global url."https://x-access-token:${GH_TOKEN}@github.com/chihiro-adachi/".insteadOf git@github.com:org-name/
           git config --global user.email "you@example.com"
           git config --global user.name "Chihiro Adachi"
-          gh repo clone chihiro-adachi/test-github-apps-target
-          ls -la
-          cd test-github-apps-target
-          git remote -v
+          
+          CLONE_DIR=$(mktemp -d)
+          git clone --depth=1 https://x-access-token:${GH_TOKEN}@github.com/chihiro-adachi/test-github-apps-target.git ${CLONE_DIR}
+          cd ${CLONE_DIR}
           git checkout -b ${BRANCH} origin/main
           echo 123 >> test.txt
           git add test.txt
           git commit -m "test 123"
-          git push origin ${BRANCH}
-          gh pr create --fill --base main --head ${BRANCH} 
-          
+          gh pr create --fill --base main --head ${BRANCH}
