--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,8 @@ jobs:
           app-id: ${{ secrets.APP_ID }}
           private-key: ${{ secrets.PRIVATE_KEY }}
           owner: chihiro-adachi
-          repositories: |
-            test-github-apps-target
+          #repositories: |
+          #  test-github-apps-target
       - name: Create PR
         env:
           GH_TOKEN: ${{ steps.app-token.outputs.token }}
