--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,5 @@ jobs:
           echo 123 >> test.txt
           git add test.txt
           git commit -m "test 123"
-          git push -u origin ${BRANCH}
+          git push origin ${BRANCH}
           #gh pr create --fill --base main --head ${BRANCH}
