--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,10 @@ jobs:
         env:
           GH_TOKEN: ${{ steps.app-token.outputs.token }}
         run: |
-          git config --global url."https://x-access-token:${TOKEN}@github.com/chihiro-adachi/".insteadOf git@github.com:org-name/
+          git config --global url."https://x-access-token:${GH_TOKEN}@github.com/chihiro-adachi/".insteadOf git@github.com:chihiro-adachi/
+          git config --global user.email "you@example.com"
+          git config --global user.name "Your Name"
+  
           gh repo clone chihiro-adachi/test-github-apps-target
           ls -la
           cd test-github-apps-target
