--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,3 +29,4 @@ jobs:
           echo 123 >> test.txt
           git add .
           git commit -m "test 123"
+          git push origin temp-1234
