--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,9 @@ name: 'github apps test'
 on:
   push:
   workflow_dispatch:
+permissions:
+  contents: write
+  pull-requests: write
 jobs:
   pull_request:
     runs-on: ubuntu-latest
@@ -12,8 +15,8 @@ jobs:
           app-id: ${{ secrets.APP_ID }}
           private-key: ${{ secrets.PRIVATE_KEY }}
           owner: chihiro-adachi
-          #repositories: |
-          #  test-github-apps-target
+          repositories: |
+            test-github-apps-target
       - name: Create PR
         env:
           GH_TOKEN: ${{ steps.app-token.outputs.token }}
