--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,13 +20,13 @@ jobs:
       - name: Create PR
         env:
           GH_TOKEN: ${{ steps.app-token.outputs.token }}
+          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
         run: |
           git config --global url."https://x-access-token:${GH_TOKEN}@github.com/".insteadOf "https://github.com/"
           git config --global user.email "you@example.com"
           git config --global user.name "Your Name"
   
-          gh repo clone chihiro-adachi/test-github-apps-target
-          ls -la
+          git clone https://x-access-token:${GH_TOKEN}@github.com/chihiro-adachi/test-github-apps-target.git
           cd test-github-apps-target
           git checkout -b temp-1234 origin/main
           echo 123 >> test.txt
