--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,13 +28,13 @@ jobs:
         env:
           TOKEN: ${{ steps.app-token.outputs.token }}
         run: |
-          git remote set-url --push origin "https://x-access-token:${TOKEN}@github.com/chihiro-adachi/test-github-apps-target"
+          git remote set-url origin "https://x-access-token:${TOKEN}@github.com/chihiro-adachi/test-github-apps-target"
+          git remote -v
+
           git config --global user.email "chihiro-adachi@example.com"
           git config --global user.name "Chihiro Adachi"
           git checkout -b temp-1234 origin/main
           echo 123 >> test.txt
           git add .
           git commit -m "test 123"
-          git remote -v
-          git remote set-url 
           git push origin temp-1234
