--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         env:
           TOKEN: ${{ steps.app-token.outputs.token }}
         run: |
-          git remote set-url origin "https://x-access-token:${TOKEN}@github.com/chihiro-adachi/test-github-apps-target"
+          git remote set-url origin "https://github-actions:${TOKEN}@github.com/chihiro-adachi/test-github-apps-target"
           git remote -v
 
           git config --global user.email "chihiro-adachi@example.com"
