--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
           TOKEN: ${{ steps.app-token.outputs.token }}
           PAT: ${{ secrets.PAT }}
         run: |
-          git remote set-url origin "https://github-actions:${PAT}@github.com/chihiro-adachi/test-github-apps-target"
+          git remote set-url origin "https://x-access-token:${PAT}@github.com/chihiro-adachi/test-github-apps-target"
           git remote -v
 
           git config --global user.email "chihiro-adachi@example.com"
