--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,9 @@ name: 'github apps test'
 on:
   push:
   workflow_dispatch:
-permissions:
-  contents: write
-  pull-requests: write
+# permissions:
+#   contents: write
+#   pull-requests: write
 jobs:
   pull_request:
     runs-on: ubuntu-latest
