--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,9 +39,9 @@ jobs:
           git config --global user.email "chihiro-adachi@example.com"
           git config --global user.name "Chihiro Adachi"
           git fetch origin
-          git checkout -b temp-1234 origin/main
+          git checkout -b temp-1234-1 origin/main
           echo 123 >> test.txt
           git add .
           git commit -m "test 123"
-          git push origin temp-1234
-          gh pr create --fill --base main --head temp-1234
+          git push origin temp-1234-1
+          gh pr create --fill --base main --head temp-1234-1
